<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".UserOrderActivity">

    <TextView
        android:id="@+id/checkout"
        android:layout_width="408dp"
        android:layout_height="34dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="2dp"
        android:background="#F4F4F4"
        android:text="@string/checkout"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_Total"
        android:layout_width="402dp"
        android:layout_height="31dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="4dp"
        android:background="#FFF4F4F4"
        android:text="@string/order_total"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_Total"
        android:layout_width="201dp"
        android:layout_height="46dp"
        android:layout_marginTop="512dp"
        android:layout_marginEnd="16dp"
        android:background="#FFF4F4F4"
        android:text="@string/sub_total"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sales_Tax"
        android:layout_width="201dp"
        android:layout_height="46dp"
        android:layout_marginTop="568dp"
        android:layout_marginEnd="16dp"
        android:background="#FFF4F4F4"
        android:text="@string/sales_tax"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display_Total"
        android:layout_width="201dp"
        android:layout_height="46dp"
        android:layout_marginTop="624dp"
        android:layout_marginEnd="16dp"
        android:text="@string/total"
        android:textAlignment="textStart"
        android:textColor="#E1B825"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/place_Order_Button"
        android:layout_width="142dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="72dp"
        android:background="#F14882"
        android:onClick="addToStoreOrders"
        android:text="@string/place_order_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/list"
        android:layout_width="401dp"
        android:layout_height="421dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293" />

</androidx.constraintlayout.widget.ConstraintLayout>